<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="0dp"
    android:layout_marginVertical="0dp"
    android:background="#ECFDE6"
    android:orientation="vertical">

    <!-- Incluir el header reutilizable -->
    <include layout="@layout/activity_header" />

    <TextView
        android:id="@+id/text_incontinencia"
        android:layout_width="match_parent"
        android:gravity="top|center"
        android:background="@drawable/pagactual2_drawable"
        android:layout_height="50dp"
        android:text="@string/incontinencia"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_preoperatorio2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/pagactual_drawable"
        android:gravity="center"
        android:elevation="20dp"
        android:text="@string/text_preoperatorio2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:textStyle="bold" />

    <!-- Resto del contenido -->

    <TextView
        android:id="@+id/text_anestesia"
        android:gravity="center"
        android:text="@string/text_anestesia"
        android:background="@drawable/body_drawable"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:elevation="12dp"
        android:textColor="#000000"
        android:clickable="true"
        android:onClick="openAnestesiaActivity"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/text_preparacion"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:elevation="12dp"
        android:background="@drawable/body_drawable"
        android:layout_height="90dp"
        android:text="@string/text_preparacion"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="#000000"
        android:clickable="true"
        android:onClick="openPreparacionActivity"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/text_ingreso"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:elevation="12dp"
        android:background="@drawable/body_drawable"
        android:layout_height="90dp"
        android:text="@string/text_ingreso"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="#000000"
        android:clickable="true"
        android:onClick="openIngresoActivity"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_hospital"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:elevation="12dp"
        android:background="@drawable/body_drawable"
        android:layout_height="90dp"
        android:text="@string/text_hospital"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="#000000"
        android:clickable="true"
        android:onClick="openHospitalActivity"
        android:textStyle="bold" />

</LinearLayout>