<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="0dp"
    android:layout_marginVertical="0dp"
    android:background="#ECFDE6"
    android:orientation="vertical">

    <!-- Incluir el header reutilizable -->
    <include layout="@layout/activity_header" />
    <TextView
        android:id="@+id/text_estoma"
        android:layout_width="match_parent"
        android:gravity="top|center"
        android:background="@drawable/pagactual2_drawable"
        android:layout_height="50dp"
        android:text="@string/text_estoma"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:elevation="20dp"
        android:background="@drawable/pagactual_drawable"
        android:layout_height="50dp"
        android:text="@string/text_postoperatorio2"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <!-- Resto del contenido -->

    <TextView
        android:id="@+id/text_info_proceso"
        android:gravity="center"
        android:text="@string/text_alta"
        android:background="@drawable/body_drawable"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:elevation="12dp"
        android:clickable="true"
        android:onClick="openAltaActivity"
        android:textColor="#000000"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/text_preoperatorio"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:elevation="12dp"
        android:background="@drawable/body_drawable"
        android:layout_height="115dp"
        android:text="@string/text_ostomia"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="#000000"
        android:clickable="true"
        android:onClick="openOstomiaActivity"
        android:textStyle="bold" />

</LinearLayout>