<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="0dp"
    android:layout_marginVertical="0dp"
    android:background="#D7FACB"
    android:orientation="vertical">

    <!-- Incluir el header reutilizable -->
    <include layout="@layout/activity_header" />


    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:elevation="20dp"
        android:background="@drawable/pagactual_drawable"
        android:layout_height="60dp"
        android:text="@string/reconstrucci_n_del_tr_nsito"
        android:textAlignment="center"
        android:textSize="11sp"
        android:textColor="#005B14"
        android:textStyle="bold" />

    <!-- Resto del contenido -->

    <TextView
        android:id="@+id/text_colon"
        android:gravity="center"
        android:text="@string/ilestomia_lateral"
        android:background="@drawable/body_drawable"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:elevation="12dp"
        android:textColor="#000000"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/text_recto"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:elevation="12dp"
        android:background="@drawable/body_drawable"
        android:layout_height="120dp"
        android:text="@string/cierre_de_colostomia_terminal"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textStyle="bold" />

</LinearLayout>

