<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="0dp"
    android:layout_marginVertical="0dp"
    android:background="#D7FACB"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- Incluir el header reutilizable -->
    <include layout="@layout/activity_header2" />

    <TextView
        android:id="@+id/text_preoperatorio2"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:elevation="20dp"
        android:background="@drawable/pagactual_drawable"
        android:layout_height="65dp"
        android:text="@string/text_postoperatorio2"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="#005B14"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_alta"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:elevation="12dp"
        android:background="@drawable/body_drawable"
        android:layout_height="120dp"
        android:text="@string/text_alta"
        android:textAlignment="center"
        android:textSize="25sp"
        android:clickable="true"
        android:onClick="openAltaActivity"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_ostomia"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:elevation="12dp"
        android:background="@drawable/body_drawable"
        android:layout_height="120dp"
        android:text="@string/text_ostomia"
        android:textAlignment="center"
        android:textSize="25sp"
        android:clickable="true"
        android:onClick="openOstomiaActivity"
        android:textStyle="bold" />

</LinearLayout>