<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="0dp"
    android:layout_marginVertical="0dp"
    android:background="#D7FACB"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- Incluir el header reutilizable -->

    <!-- Resto del contenido -->

    <include
        android:id="@+id/include"
        layout="@layout/activity_header"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="101dp" />


    <TextView
        android:id="@+id/text_tittle_instrucciones"
        android:layout_width="365dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:background="@drawable/instrucciones_drawable"
        android:elevation="12dp"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/text_tittle_instrucciones"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/text_instrucciones"
        android:layout_width="365dp"
        android:layout_height="360dp"
        android:layout_gravity="center"
        android:background="@drawable/bordes_instrucciones"
        android:elevation="12dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/text_instrucciones"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
         />

    <Button
        android:id="@+id/btn_comenzar"
        android:layout_width="255dp"
        android:layout_height="111dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#95FFB3"
        android:text="@string/text_comenzar"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:strokeColor="#006A37"
        app:strokeWidth="2dp" />

</LinearLayout>
